2009-02-18  Stefan Kost  <ensonic@users.sf.net>

	* README:
	  More instructions.

	* configure.ac:
	  Strip newline.

2009-01-13  Krzysztof Foltman  <kfoltman@users.sf.net>

	* FSM/Makefile.am:
	* FSM/WahMan:
	* FSM/WahMan/Makefile.am:
	* FSM/WahMan/WahMan.cpp:
	* FSM/dspchips/DSPChips.h:
	* configure.ac:
	  Add ported WahMan.

2008-12-30  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* autogen.sh:
	* configure.ac:
	* m4 (added):
	  Make use of a macro dir.

2008-12-27  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Use more automake features.

2008-12-26  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	  Add more info.

	* configure.ac:
	  Run 'autoupdate' on configure.ac.

2008-12-08  Stefan Kost  <ensonic@users.sf.net>

	* README:
	* TODO:
	* autogen.sh:
	* configure.ac:
	  Clean up configure.

2008-12-07  Stefan Kost  <ensonic@users.sf.net>

	* Matilde/Tracker/Makefile.am:
	  Build mono variant too.

	* TODO:
	  Proper locations for data files.

2008-12-07  Stefan Kost  <ensonic@users.sf.net>

	* Matilde/Makefile.am:
	  Add missing Makefile.

2008-12-07  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	  Takes porting notes.

	* TODO:
	  Next steps.

	* Makefile.am:
	* Matilde/Tracker/BuzzInstrument.cpp:
	* Matilde/Tracker/BuzzInstrument.h:
	* Matilde/Tracker/BuzzSample.cpp:
	* Matilde/Tracker/BuzzSample.h:
	* Matilde/Tracker/Channel.cpp:
	* Matilde/Tracker/Channel.h:
	* Matilde/Tracker/Envelope.cpp:
	* Matilde/Tracker/Envelope.h:
	* Matilde/Tracker/ExtResampler.cpp:
	* Matilde/Tracker/ExtResampler.h:
	* Matilde/Tracker/IInstrument.cpp:
	* Matilde/Tracker/IInstrument.h:
	* Matilde/Tracker/ISample.cpp:
	* Matilde/Tracker/ISample.h:
	* Matilde/Tracker/Makefile.am:
	* Matilde/Tracker/SurfsDSPLib/Makefile.am:
	* Matilde/Tracker/SurfsDSPLib/SRF_2PFilter.cpp:
	* Matilde/Tracker/SurfsDSPLib/SRF_2PFilter.h:
	* Matilde/Tracker/SurfsDSPLib/SRF_Amp.cpp:
	* Matilde/Tracker/SurfsDSPLib/SRF_Amp.h:
	* Matilde/Tracker/SurfsDSPLib/SRF_AutoGain.cpp: